force-app/main/default/objects/JIRA_Issue__c/JIRA_Issue__c.object-meta.xml
<CustomObject>
    <label>JIRA Issue</label>
    <nameField>
        <label>JIRA Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIRA Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>