force-app/main/default/objects/JIRA_Issue__c/fields/JIRA_Link__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Link__c</fullName>
    <label>JIRA Link</label>
    <type>Url</type>
</CustomField>