force-app/main/default/objects/JIRA_Issue__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>JIRA Issues</relationshipLabel>
    <relationshipName>JIRA_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>